--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand&family=Yeseva+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mooli&family=Quicksand:wght@300&family=Yeseva+One&display=swap");
 
 @tailwind base;
 @tailwind components;
